[PN-10475] Creation RegistryImport API
